# nerfstudio

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.js  .readthedocs.yaml  CNAME  Dockerfile  HF_TOKEN  LICENSE  README.md  _torchtyping_to_jaxtyping.py  block_nerf.ipynb  compose.yaml  compute_metrics.ipynb  experiment_log.txt  extract_images.py  genindex.html  ges_traj.esp  hearst_path.json  heightnet.ipynb  iccv_progress.md  index.html  launch_bash.sh  nerf_carla_pipeline.py  nerf_dataset_exp.py  nerf_pipeline.py  nerfstudio.code-workspace  notes.md  objects.inv  outputs  package.json  pixi.toml  py-modindex.html  pyproject.toml  pyproject.toml.bak  redwoods_path.json  requirements.txt  (+13 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.doctrees/: environment.pickle  index.doctree
.doctrees/developer_guides/: config.doctree  new_methods.doctree
.doctrees/extensions/: blender_addon.doctree  maya_plugin.doctree  sdfstudio.doctree  unreal_engine.doctree
.doctrees/quickstart/: custom_dataset.doctree  data_conventions.doctree  existing_dataset.doctree  export_geometry.doctree  first_nerf.doctree  installation.doctree  viewer_quickstart.doctree
.doctrees/reference/: contributing.doctree
.github/workflows/: action-test.yml  build-deploy.yml  build_docker_image.yml  code_checks.yml  core_code_checks.yml  doc.yml  lint.yml  main.yaml  prettier.yaml  publish.yml  pytest.yml  viewer_build_deploy.yml  viewer_client_app.yml  viewer_prettier.yaml
Templates/: Arboretum.eps  Arboretum_1.eps  Arboretum_2.eps  Arboretum_3.eps  Transamerica.json  test.json
_modules/: index.html
_sources/: index.md.txt
_sources/extensions/: maya_plugin.md.txt
_sources/quickstart/: existing_dataset.md.txt  export_geometry.md.txt  first_nerf.md.txt
_static/: custom.js  mystnb.css  pygments.css  twemoji.css  twemoji.js
arkit_utils/: arkit_pose_to_colmap.py  colmap_txt2bin.py  pose2tum_evo.py  prepare_nerfstudio_dataset.py  run_nerfstudio_dataset.py
arkit_utils/mesh_to_points3D/: arkitmeshply2point3D.py  arkitobj2point3D.py
block_nerf/: baseline_transforms.json  block_nerf.ipynb  block_nerf.py  camera_path_one_lap.json  camera_path_transformed.json  dataparser_transforms.json
camera_paths/: camera_path_nerf_coordinates.json  camera_path_one_lap_final.json  camera_path_transformed_original.json  octahedron_camera_path.json
camerapaths/: camera1.json  camera2.json
colab/: demo.ipynb  demo_light.ipynb
configs/: config.yaml  default.yaml  default_setup.yaml  flat.yaml  graph_default.yaml  graph_instant_ngp.yaml  graph_mipnerf.yaml  graph_mipnerf_360.yaml  graph_nerfw.yaml  graph_record_3d.yaml  graph_semantic_nerf.yaml  graph_tensorf.yaml  graph_vanilla_nerf.yaml  instant_ngp.yaml  instant_ngp_tcnn.yaml  modules.json  nerfw.yaml  semantic_nerf.yaml  test_dryrun.yaml  vanilla_nerf.yaml
configs/data/: default_data.yaml
deployment/: worker.py
developer_guides/: config.html  new_methods.html
docs/: Makefile  conf.py  dataset.rst  field_modules.rst  fields.rst  graphs.rst  index.md  index.rst  make.bat  pyrad.rst  quickstart.rst  requirements.txt
environment/: README.md  jupyter.py  mattport.dockerfile  requirements.txt  run_jupyter.sh  run_setup_environment.sh  run_tensorboard.sh
evals/: -nap02data-datasets-nerf-100.json  data-images-stretview.json  data-nerfstudio-poster.json  data-polycam-streetview.json  data-videos-hovedbygget.json  data-videos-ntnu_statue.json  data-videos-ohma_electra-15.json  data-videos-ohma_electra-20.json  data-videos-ohma_electra-25.json  data-videos-ohma_electra-33.json  data-videos-ohma_electra-50.json  data-videos-uteplante_test.json  exp_capacity_1-0.json  exp_capacity_1-1.json  mipnerf-fox.json  mipnerf-lego.json  mipnerf-ohma-electra.json  mipnerf-trex.json  nerfacto-forward.json  vanilla-nerf-fox.json  vanilla-nerf-lego.json  vanilla-nerf-ohma-electra.json  vanilla-nerf-trex.json
extensions/: blender_addon.html  maya_plugin.html  sdfstudio.html  unreal_engine.html
ffmpeg_test/: ffmpeg_test.ipynb
nerf/: encodings.py
nerfstudio/: .gitignore  Dockerfile  __init__.py  defaults.py
notebooks/: README.md  configs.ipynb  creating_pipelines.ipynb  notebook_imports.py  test.ipynb  test_ngp.ipynb  visualize_camera_paths.ipynb  visualize_dataset.ipynb  visualize_encoders.ipynb  visualize_viewer.ipynb
ovx/: README.md  batch_training.py  roomplan_dataset.csv  run.sh  run_nerfstudio.sh  submit_task.py
projects-lerf/: pyproject.toml
quickstart/: custom_dataset.html  data_conventions.html  existing_dataset.html  export_geometry.html  first_nerf.html  installation.html  viewer_quickstart.html
radiance/: pixel_samplers.py
reference/: contributing.html
regional_nerf/: README.md  pyproject.toml
regional_nerf/regional_nerfacto/: config.py  datamanager.py  field.py  model.py  pipeline.py
regional_nerf/regional_nerfacto/utils/: dino_dataloader.py  dino_extractor.py  feature_dataloader.py
scripts/: README.md  __init__.py  add_query_images.py  airsim2transforms.py  circular_camera_path.json  circular_camera_path_1fps.json  circular_camera_path_3fps.json  circular_camera_path_cameras.json  colmap2nerf.py  copy_n_run.sh  densities_to_vti.py  eval.py  eval.sh  example_camera_path.json  exporter.py  extract_mesh.py  feature_maps.py  generate_ges_traj.py  gerry00_render_camera_paths.ipynb  gerry01_eval_images.ipynb  gerrys_eval.py  ges2transforms.py  install.sh  iphone2nerf.py  mesh.py  my_utils.py  nerf_density_query_fib_sphere_many.py  old_process_data.py  process_data.py  process_nuscenes_masks.py  process_query_images.py  render.py  run_data_preprocessor.py  run_dataset_processor.py  run_eval.py  run_train.py  run_train_nerf.py  run_viewer_bridge_server.py  save_nerf_model.py  test_disk_dataparser.py  (+11 more)
slurm/: colmap-exp.slurm  render-mip.slurm  train-mip.slurm  train.slurm
slurm_logs/: train_mip-srun.out
tests/: test_disk_dataparser.py  test_nerfacto_integration.py  test_run_train.py  test_splatfacto_integration.py  test_train.py
viewer/: README.md
wandb/: settings
(+1876 files in other folders)
